# RNAChrom_ALLvsALL_data_processing

./: .gitignore  DB_recalc.ipynb  DB_scripts.py  README.md  count_fastq.sh  environment.yml  pyproject.toml  requirements.txt  run_fastuniq_once.sh  setup.cfg  setup.py
RnaChromProcessing/: DB_scripts.py  __init__.py  main.py
RnaChromProcessing/DataProcessors/: Base.py  RedC.py  stages.py
RnaChromProcessing/DataProcessors/stages/: __init__.py  alignedtobed.py  bamfilter.py  basicstage.py  contacts.py  dedup.py  hisat.py  rsites.py  stats.py  trim.py
RnaChromProcessing/utils/: default_configs.py  utils.py
configs/: fastuniq_test_conf.json  gencode_v43_rpl_genes.txt  gencode_vM32_rpl_genes.txt  imargi_test.json  radicl_conf.json  radicl_test.json
configs/rnachromprocessing/: grid_hg38.yml  grid_hg38_test.json  grid_mm10.yml  grid_mm10_test.json  imargi_test.json  radicl_full.yml  radicl_test.json  radicl_test.yml
configs/strand/: human_test.json  human_test.yml  mouse_full.yml  mouse_test.json  mouse_test.yml
configs/xrna/: mouse_full.yml  mouse_test.json  mouse_test.yml
docs/detect-strand/: README.md
docs/rnachromprocessing/: README.md
docs/x-rna/: README.md
src/RnaChromProcessing/: DB_scripts.py  detect_strand.py  infer_xrna.py  main.py
src/RnaChromProcessing/DataProcessors/: AllStages.py  Base.py  SingleStage.py  Strand.py  __init__.py
src/RnaChromProcessing/DetectStrand/: OLD_Strand.py  Strand.py  _Strand.py  __init__.py
src/RnaChromProcessing/Processing/: AllStages.py  Base.py  SingleStage.py  __init__.py
src/RnaChromProcessing/XRNA/: AnnotInfo.py  DataPreprocessing.py  Labeller.py  XRNA.py  (+3 more)
stats/: count_aligned.py
(+30 files in other folders)
