[metadata]
name = RnaChromProcessing
version = 1.2.1
description = Package for processing data of "ALL-vs-ALL" RNA-Chromatin interactions capturing experiments
author = Andrey Sigorskikh
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy>=1.23
    pandas>=1.4
    matplotlib>=3.5
    seaborn>=0.12
    biopython==1.81
    pyfastx==1.1.0
python_requires = >=3.9
zip_safe = no

[options.packages.find]
where=src