[metadata]
name = RnaChromProcessing
version = 1.4.0
description = Package for processing data of "ALL-vs-ALL" RNA-Chromatin interactions capturing experiments
author = Andrey Sigorskikh
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
install_requires =
    biopython==1.81
    matplotlib==3.7.1
    numpy==1.24.2
    pandas==1.5.3
    pydantic==2.4.1
    pyfastx==1.1.0
    pyyaml==6.0.1
    seaborn==0.12.2
python_requires = >=3.9
zip_safe = no

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    rnachromprocessing = RnaChromProcessing.main:main
    detect-strand = RnaChromProcessing.detect_strand:main
    infer-xrna = RnaChromProcessing.infer_xrna:main
